# par_test_system

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 418e1d2f64eb_init_test_system_models.py  7134642db886_create_core_tables.py  9d4a2f2c7f23_add_test_targets_table.py
backend/proto/: Ai.proto  Ai_Common.proto  Ai_Control.proto  Ai_Documents.proto  Ai_FacilityStructure.proto  Ai_Handshake.proto  Ai_Icons.proto  Ai_ModuleLaunch.proto  Ai_NetworkInfo.proto  Ai_OrgStructure.proto  Ai_Parameters.proto  Ai_PoiEdit.proto  Ai_PostParameters.proto  Ai_PostState.proto  Ai_Report.proto  Ai_StopAction.proto  Ai_TextMessage.proto  BinaryDataParam.proto
backend/src/: main.py
backend/src/config/: logging_conf.py  settings.py
backend/src/constants/: enums.py
backend/src/core/: db.py
backend/src/ishd/: client.py  deps.py  paragraph_edm.py  service.py  test_client.py
backend/src/models/: __init__.py  base.py  log.py  test_case.py  test_case_run.py  test_group.py  test_run.py  test_run_log.py  test_target.py
backend/src/paragraph/: __init__.py  db.py  models.py  repository.py  schemas.py  test_db.py  xml_templates.py
backend/src/schemas/: document.py
backend/src/services/: autotest_reports.py  (+6 more)
backend/tests/: conftest.py  test_paragraph_repository.py  test_user_dict_integration.py  test_user_dict_xml.py  test_user_dicts_helpers.py
backend/tools/: smoke_perf.ps1
desktop-installer/: ParagraphTestSystemDesktop.spec  README.md  launcher.py  pyproject.toml
desktop-installer/ui/: connect.html
(+67 files in other folders)
